--- a/contactos.html
+++ b/contactos.html
@@ -8,5 +8,20 @@
 </head>
 <body>
     <H1>Contactos</H1>
+    <table width="280" cellspacing="1" cellpadding="3" border="0" bgcolor="#1E679A">
+        <tr>
+           <td><font color="#FFFFFF" face="arial, verdana, helvetica">
+        <b>Direccion:</b>
+           </font></td>
+        </tr>
+        <tr>
+           <td bgcolor="#ffffcc">
+           <font face="arial, verdana, helvetica">
+           Av. Pairumani.
+           </font>
+           </td>
+        </tr>
+        </table>
+    
 </body>
 </html>
