--- a/contactos.html
+++ b/contactos.html
@@ -21,7 +21,16 @@
            </font>
            </td>
         </tr>
+        <tr>
+            <td bgcolor="#ffffcc">
+            <font face="arial, verdana, helvetica">
+            Telefono:
+            </font>
+            </td>
+         </tr>
         </table>
-    
+        <button onclick="alertar('segunda alerta');">
+            BOTON
+          </button>
 </body>
 </html>
