--- a/contactos.html
+++ b/contactos.html
@@ -17,14 +17,21 @@
         <tr>
            <td bgcolor="#ffffcc">
            <font face="arial, verdana, helvetica">
-           Av. Pairumani.
+           Av. Pairumani Km1 .
            </font>
            </td>
         </tr>
         <tr>
             <td bgcolor="#ffffcc">
             <font face="arial, verdana, helvetica">
-            Telefono:
+            Telefono: 44459546
+            </font>
+            </td>
+         </tr>
+         <tr>
+            <td bgcolor="#ffffcc">
+            <font face="arial, verdana, helvetica">
+            Numero 45
             </font>
             </td>
          </tr>
