--- a/contactos.html
+++ b/contactos.html
@@ -39,5 +39,10 @@
         <button onclick="alertar('segunda alerta');">
             BOTON
           </button>
+          <script type="text/javascript">
+            function alertar(texto) {
+               alert("vico@gmail.com");
+            }
+        </script>
 </body>
 </html>
