--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <h1 class="d-inline-block py-1 px-4" style="color: #6C7293;">EMPRESA DE EQUIPOS DE COMPUTACION <br>GRUPO DIEZ
               </h1>
               <img src="assets/img/medio.png" alt="" width="200" height="200" class="d-block ">
-      
+      <button onclick="alert()"></button>
               <h1 class="d-inline-block bg-secondary text-primary py-1 px-4">SYSTEM_DIEZ</h1>
             </div>
       
@@ -52,7 +52,9 @@
         </div>
       </div>
       <script>
-
+function alert(){
+alert("holsa como estas");
+}
       </script>
 </body>
 </html>
