--- a/servicios.html
+++ b/servicios.html
@@ -1,1 +1,15 @@
-<h1>bienbeniodo a servicios</h1>
+<h1>SERVICIOS</h1>
+<p class="parrafo">
+    Somos una empresa 100% Hidalguense, que brinda servicios y soluciones en 
+    tecnologías de la información, a la pequeña y mediana empresa, respaldado por 
+    personal capacitado.
+  </p>
+  <h2>SERVICIOS</h2>
+
+<button onclick="myFunction()">SERVICIOS</button>
+
+<script>
+function myFunction() {
+  alert("TENEMOS OFERTAS");
+}
+</script>
