--- a/servicios.html
+++ b/servicios.html
@@ -1,6 +1,6 @@
 <h1>SERVICIOS</h1>
 <p class="parrafo">
-    Somos una empresa 100% Hidalguense, que brinda servicios y soluciones en 
+    Somos una empresa 100% Hidalguense, que brinda servicios y soluciones en <BR>
     tecnologías de la información, a la pequeña y mediana empresa, respaldado por 
     personal capacitado.
   </p>
