--- a/servicios.html
+++ b/servicios.html
@@ -1,15 +1,23 @@
-<h1>SERVICIOS</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Servicios</title>
+</head>
+<body>
+    <h1>SERVICIOS</h1>
 <p class="parrafo">
     Somos una empresa 100% Hidalguense, que brinda servicios y soluciones en <BR>
     tecnologías de la información, a la pequeña y mediana empresa, respaldado por 
     personal capacitado.
   </p>
-  <h2>SERVICIOS</h2>
-
 <button onclick="myFunction()">SERVICIOS</button>
-
 <script>
 function myFunction() {
   alert("TENEMOS PROMOCIONES");
 }
 </script>
+</body>
+</html>
