--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
 <body>
     <nav  id="menu">
         <ul  class="nav-menu">
-            <li  class="nav-menu-items"><a href="">Datos de navegacio</a></li>
-            <li  class="nav-menu-items"><a href="">Datos de navegacio</a></li>
-            <li  class="nav-menu-items"><a href="">Datos de navegacio</a></li>
-            <li  class="nav-menu-items"><a href="">Datos de navegacio</a></li>
-            <li  class="nav-menu-items"><a href="">Datos de navegacio</a></li>
-            <li  class="nav-menu-items"><a href="">Datos de navegacio</a></li>
-            <li  class="nav-menu-items"><a href="">Datos de navegacio</a></li>
+            <li  class="nav-menu-items"><a href="index.html">Inicio</a></li>
+            <li  class="nav-menu-items"><a href="">Servicios</a></li>
+            <li  class="nav-menu-items"><a href="">Contactos</a></li>
+            <li  class="nav-menu-items"><a href="">Acerca de</a></li>
         </ul>
     </nav>
       <div class="section  ba">
